@@ -8,7 +8,8 @@ Changes in existing functions:
     in the set. Default for tlim is now 1:10 instead of 10. 
 
 Bug fixes:
-  - seqmeant(): added color for missing state to color palette when using with.missing=TRUE 
+  - seqmeant(): added color for missing state to color palette when using with.missing=TRUE
+  - dissrep(), seqrep(), seqrplot(): fixed bad coverage statistics when tsim set to other than default value of 0.10
 
 ## ==========
 Version 1.6
